--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -74,25 +74,47 @@ a.next {
   position: absolute;
   left: 0;
 }
-
+.slider__dots{
+  position: absolute;
+  bottom: -30px;
+  left: 50%;
+  z-index: 5;
+}
+.slider__dots-item{
+  background-color: #999999;
+  border-radius: 50%;
+  border: 1px solid #ffffff;
+  margin: 0 5px;
+  &.active, &:hover, &:focus{
+    background-color: #999999 *0.6;
+  }
+}
+.slider__dots-link{
+  display: block;
+  height: 15px;
+  width: 15px;
+}
 //---content---//
 
 .modal-wrapper{
+  display: none;
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: auto;
   padding: 30px 0;
   z-index: 1;
   left: 0;
   top: 0;
-  background-color: darkolivegreen;
-  overflow: auto;
+  background-color: black;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 .modal-content{
   width: 90%;
   height: 100%;
   margin: auto;
   position: relative;
+
 }
 .modal-slides{
   width: 100%;
@@ -119,11 +141,13 @@ a.next {
 .thumbnail-list{
   position: absolute;
   bottom: -40%;
+  padding-bottom: 5%;
 }
 .thumbnail-item{
-  &:hover{
+  display: inline-block;
+  &:hover, &.active{
     cursor: pointer;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 8px rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
   }
 }
 
